objects/New_Product_Entry__e/fields/Product_Category__c.field-meta.xml
<CustomField>
    <fullName>Product_Category__c</fullName>
    <label>Product Category</label>
    <length>100</length>
    <type>Text</type>
</CustomField>