objects/New_Product_Entry__e/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <label>Product Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>